Add a jtreg test